# wgpu-renderer

./: .editorconfig  .gitignore  Cargo.toml  LICENSE.txt  README.md  build.rs
.cargo/: config.toml
Content/: SM_Cube.mtl
Examples/: Cubes.rs  Triangle.rs
Resources/: Cube.mtl
Shaders/: Cubes.wgsl  Texture.wgsl  Triangle.wgsl
Source/: Camera.rs  Display.rs  DrawModel.rs  Instance.rs  Main.rs  Material.rs  Model.rs  Rainbow.rs  Runtime.rs  State.rs  Texture.rs  lib.rs
Source/Camera/: Camera.rs  CameraController.rs  CameraUniform.rs  mod.rs
Source/Color/: HslaColor.rs  RgbaColor.rs  mod.rs
Source/Render/: DrawModel.rs  IndexBuffer.rs  IndexFormat.rs  Instance.rs  Material.rs  Mesh.rs  Model.rs  PolygonMode.rs  Renderer.rs  StepMode.rs  Texture.rs  UniformBuffer.rs  Vertex.rs  VertexAttribute.rs  VertexBuffer.rs  VertexBufferLayout.rs  VertexFormat.rs  mod.rs
Source/Render/Pipeline/: CompareFunction.rs  DepthBiasState.rs  DepthStencilState.rs  Face.rs  FragmentState.rs  FrontFace.rs  PipelineDescriptor.rs  PolygonMode.rs  PrimitiveState.rs  PrimitiveTopology.rs  StencilFaceState.rs  StencilOperation.rs  StencilState.rs  TextureFormat.rs  VertexState.rs  mod.rs
Source/Shader/: Shader.rs  ShaderSource.rs  ShaderStage.rs  mod.rs
examples/: index.html
scripts/: wasm.ps1
src/: asset.rs  camera.rs  lib.rs  main.rs  model.rs  shader.wgsl  texture.rs
