[package]
name = "renderer"
version = "0.0.1"
description = "Renderer"
repository = "https://github.com/GuilhermeWerner/Renderer"
license = "MIT"
edition = "2021"
publish = false

[lib]
name = "renderer"
crate-type = ["rlib"]
path = "src/lib.rs"

[[bin]]
name = "renderer"
path = "src/main.rs"

[dependencies]
