[package]
name = "renderer"
version = "0.0.1"
description = "Renderer"
repository = "https://github.com/GuilhermeWerner/Renderer"
license = "MIT"
edition = "2021"
publish = false

[lib]
name = "renderer"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "renderer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
cfg-if = "1"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
winit = "0.28"
bytemuck = { version = "1.12", features = [ "derive" ] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.36.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
wgpu = { version = "0.18", features = ["webgl"] }
